<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/seoulcity">

<!--    <ImageView-->
<!--        android:layout_width="223dp"-->
<!--        android:layout_height="173dp"-->
<!--        android:layout_marginTop="120dp"-->
<!--        app:srcCompat="@drawable/logo" />-->


    <EditText
        android:id="@+id/editText_userID"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="340dp"
        android:drawableLeft="@drawable/username"
        android:background="#ffffff"
        android:textColor="#000000"
        android:hint="@string/userId" />
    <EditText
        android:id="@+id/editText_userPW"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:textColor="#000000"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_white"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/textView_signUp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#FF9800"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>



</LinearLayout>