<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/seoulcity"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="300dp"
        android:text="@string/userId"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/editText_userID"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/username"
        android:background="#ffffff"
        android:textColor="#000000"
        android:hint="@string/userId" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:text="Password"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editText_userPW"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"/>
    <Button
        android:id="@+id/button_idCheck"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_white"
        android:text="ID CHECK"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rectangle_white"
        android:text="@string/register"/>

</LinearLayout>